# reactive-rooms

./: .env.exampl  Cargo.toml  Dockerfile  README.md
src/: auth.rs  lib.rs  main.rs
src/api/: dto.rs  mod.rs  routes.rs
src/api/handlers/: mod.rs
src/auth/: mod.rs
src/domain/: event.rs  message.rs  mod.rs  room.rs  user.rs
src/message_bus/: mod.rs
src/storage/: mod.rs
src/websocket/: host.rs  mod.rs  user.rs
