[package]
name = "reactive-chat-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
axum-keycloak-auth = {version="0.8", default-features = false, features = ["rustls-tls"]}
dashmap = "6"
dotenvy = "0.15.7"
futures-util = "0.3"
mimalloc = { version = "*", features = ["v3"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
